// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Page Snapshots renders EmployeeCompletePage unchanged 1`] = `
<div>
  <div
    class="box-shadow"
  >
    <div
      class="notification-box"
    >
      <h1
        class="msg-title"
      >
        ユーザの登録が完了しました。 or ユーザの更新が完了しました。 or ユーザの削除が完了しました。
      </h1>
      <div
        class="notification-box-btn"
      >
        <button
          class="btn btn-primary btn-sm"
          type="button"
        >
          OK
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Page Snapshots renders EmployeeConfirmPage unchanged 1`] = `
<div>
  <div
    class="row"
  >
    <form
      class="c-form box-shadow"
    >
      <ul
        class="show-data"
      >
        <li
          class="title"
        >
          <p>
            情報確認
          </p>
          <p>
            入力された情報をＯＫボタンクリックでＤＢへ保存してください
          </p>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            アカウント名
          </label>
          <div
            class="col-sm col-sm-10"
          >
            ntmhuong
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            グループ
          </label>
          <div
            class="col-sm col-sm-10"
          >
            Nhóm 1
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            氏名
          </label>
          <div
            class="col-sm col-sm-10"
          >
            Nguyễn Thị Mai Hương
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            カタカナ氏名
          </label>
          <div
            class="col-sm col-sm-10"
          >
            名カナ
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            生年月日
          </label>
          <div
            class="col-sm col-sm-10"
          >
            1983/07/08
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            メールアドレス
          </label>
          <div
            class="col-sm col-sm-10"
          >
            メールアドレス
          </div>
        </li>
        <li
          class="form-group row d-flex  bor-none"
        >
          <label
            class="col-form-label col-sm-2"
          >
            電話番号
          </label>
          <div
            class="col-sm col-sm-10"
          >
            0914326386
          </div>
        </li>
        <li
          class="title mt-12"
        >
          <a
            href="#!"
          >
            日本語能力
          </a>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            資格
          </label>
          <div
            class="col-sm col-sm-10"
          >
            Trình độ tiếng nhật cấp 1
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            資格交付日
          </label>
          <div
            class="col-sm col-sm-10"
          >
            2010/07/08
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            失効日
          </label>
          <div
            class="col-sm col-sm-10"
          >
            2010/07/08
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            点数
          </label>
          <div
            class="col-sm col-sm-10"
          >
            290
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <div
            class="btn-group col-sm col-sm-10 ml"
          >
            <button
              class="btn btn-primary btn-sm"
              type="button"
            >
              OK
            </button>
            <button
              class="btn btn-secondary btn-sm"
              type="button"
            >
              戻る
            </button>
          </div>
        </li>
      </ul>
    </form>
  </div>
</div>
`;

exports[`Page Snapshots renders EmployeeDetailPage unchanged 1`] = `
<div>
  <div
    class="row"
  >
    <form
      class="c-form box-shadow"
    >
      <ul
        class="show-data"
      >
        <li
          class="title"
        >
          情報確認
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            アカウント名
          </label>
          <div
            class="col-sm col-sm-10"
          >
            ntmhuong
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            グループ
          </label>
          <div
            class="col-sm col-sm-10"
          >
            Nhóm 1
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            氏名
          </label>
          <div
            class="col-sm col-sm-10"
          >
            Nguyễn Thị Mai Hương
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            カタカナ氏名
          </label>
          <div
            class="col-sm col-sm-10"
          >
            名カナ
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            生年月日
          </label>
          <div
            class="col-sm col-sm-10"
          >
            1983/07/08
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            メールアドレス
          </label>
          <div
            class="col-sm col-sm-10"
          >
            	ntmhuong@luvina.net
          </div>
        </li>
        <li
          class="form-group row d-flex  bor-none"
        >
          <label
            class="col-form-label col-sm-2"
          >
            電話番号
          </label>
          <div
            class="col-sm col-sm-10"
          >
            0914326386
          </div>
        </li>
        <li
          class="title mt-12"
        >
          <a
            href="#!"
          >
            日本語能力
          </a>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            資格
          </label>
          <div
            class="col-sm col-sm-10"
          >
            Trình độ tiếng nhật cấp 1
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            資格交付日
          </label>
          <div
            class="col-sm col-sm-10"
          >
            2010/07/08
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            失効日
          </label>
          <div
            class="col-sm col-sm-10"
          >
            2010/07/08
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            点数
          </label>
          <div
            class="col-sm col-sm-10"
          >
            290
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <div
            class="btn-group col-sm col-sm-10 ml"
          >
            <button
              class="btn btn-primary btn-sm"
              type="button"
            >
              編集
            </button>
            <button
              class="btn btn-secondary btn-sm"
              type="button"
            >
              削除
            </button>
            <button
              class="btn btn-secondary btn-sm"
              type="button"
            >
              戻る
            </button>
          </div>
        </li>
      </ul>
    </form>
  </div>
</div>
`;

exports[`Page Snapshots renders EmployeeEditPage unchanged 1`] = `
<div>
  <div
    class="row"
  >
    <form
      class="c-form box-shadow was-validated"
    >
      <ul>
        <li
          class="title"
        >
          会員情報編集
        </li>
        <li
          class="box-err"
        >
          <div
            class="box-err-content"
          >
            Hiển thị lỗi chung lại đây
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              アカウント名:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control"
              type="text"
            />
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              グループ:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <select
              class="form-control"
            >
              <option>
                選択してください
              </option>
              <option>
                Nhóm 1
              </option>
              <option>
                Nhóm 2
              </option>
            </select>
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              氏名:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control"
              type="text"
            />
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              カタカナ氏名:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control"
              required=""
              type="text"
            />
            <div
              class="invalid-feedback"
            >
              Example invalid form file feedback
            </div>
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              生年月日:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10 d-flex"
          >
            <div
              class="datepicker-wrapper"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container"
                >
                  <input
                    class=""
                    placeholder="yyyy/MM/dd"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <span
                class="glyphicon glyphicon-calendar"
              />
            </div>
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              メールアドレス:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control"
              type="text"
            />
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              電話番号:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control"
              type="text"
            />
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              パスワード:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control"
              type="text"
            />
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              パスワード（確認）:
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control"
              type="text"
            />
          </div>
        </li>
        <li
          class="title mt-12"
        >
          <a
            href="#!"
          >
            日本語能力
          </a>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              資格:
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <select
              class="form-control"
            >
              <option>
                選択してください
              </option>
              <option>
                N 1
              </option>
              <option>
                N 2
              </option>
            </select>
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              資格交付日:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10 d-flex"
          >
            <div
              class="datepicker-wrapper"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container"
                >
                  <input
                    class=""
                    placeholder="yyyy/MM/dd"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <span
                class="glyphicon glyphicon-calendar"
              />
            </div>
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              失効日:
              <span
                class="note-red"
              >
                *
              </span>
            </i>
          </label>
          <div
            class="col-sm col-sm-10 d-flex"
          >
            <div
              class="datepicker-wrapper"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container"
                >
                  <input
                    class=""
                    placeholder="yyyy/MM/dd"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <span
                class="glyphicon glyphicon-calendar"
              />
            </div>
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <label
            class="col-form-label col-sm-2"
          >
            <i
              class="relative"
            >
              点数:
            </i>
          </label>
          <div
            class="col-sm col-sm-10"
          >
            <input
              class="form-control"
              type="text"
            />
          </div>
        </li>
        <li
          class="form-group row d-flex"
        >
          <div
            class="btn-group col-sm col-sm-10 ml"
          >
            <button
              class="btn btn-primary btn-sm"
              type="button"
            >
              確認
            </button>
            <button
              class="btn btn-secondary btn-sm"
              type="button"
            >
              戻る
            </button>
          </div>
        </li>
      </ul>
    </form>
  </div>
</div>
`;

exports[`Page Snapshots renders EmployeeListPage unchanged 1`] = `
<div>
  <div
    class="search-memb"
  >
    <h1
      class="title"
    >
      会員名称で会員を検索します。検索条件無しの場合は全て表示されます。
    </h1>
    <form
      class="c-form"
    >
      <ul
        class="d-flex"
      >
        <li
          class="form-group row"
        >
          <label
            class="col-form-label"
          >
            氏名:
          </label>
          <div
            class="col-sm"
          >
            <input
              aria-invalid="false"
              maxlength="125"
              type="text"
              value=""
            />
          </div>
        </li>
        <li
          class="form-group row"
        >
          <label
            class="col-form-label"
          >
            グループ:
          </label>
          <div
            class="col-sm"
          >
            <select
              class="form-select"
            >
              <option
                value=""
              >
                全て
              </option>
            </select>
          </div>
        </li>
        <li
          class="form-group row"
        >
          <div
            class="btn-group"
          >
            <button
              class="btn btn-primary btn-sm"
              disabled=""
              type="submit"
            >
              検索
            </button>
            <button
              class="btn btn-secondary btn-sm"
              type="button"
            >
              新規追加
            </button>
          </div>
        </li>
      </ul>
    </form>
  </div>
  <div
    class="row row-table"
  >
    <div
      class="css-grid-table box-shadow"
    >
      <div
        class="css-grid-table-header"
      >
        <div>
          ID
        </div>
        <button
          class="sort-header-button"
          type="button"
        >
          氏名 ▲▽
        </button>
        <div>
          生年月日
        </div>
        <div>
          グループ
        </div>
        <div>
          メールアドレス
        </div>
        <div>
          電話番号
        </div>
        <button
          class="sort-header-button"
          type="button"
        >
          日本語能力 △▼
        </button>
        <button
          class="sort-header-button"
          type="button"
        >
          失効日 ▲▽
        </button>
        <div>
          点数
        </div>
      </div>
      <div
        class="p-3"
      >
        Loading...
      </div>
    </div>
  </div>
</div>
`;

exports[`Page Snapshots renders HomePage unchanged and checks for redirection logic 1`] = `
<div>
  <div
    class="page"
  >
    <main
      class="main"
    >
      <img
        alt="Next.js logo"
        class="logo"
        data-nimg="1"
        decoding="async"
        height="20"
        src="/next.svg"
        style="color: transparent;"
        width="100"
      />
      <div
        class="intro"
      >
        <h1>
          To get started, edit the page.tsx file.
        </h1>
        <p>
          Looking for a starting point or more instructions? Head over to
           
          <a
            href="https://vercel.com/templates?framework=next.js&utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
            rel="noopener noreferrer"
            target="_blank"
          >
            Templates
          </a>
           
          or the
           
          <a
            href="https://nextjs.org/learn?utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
            rel="noopener noreferrer"
            target="_blank"
          >
            Learning
          </a>
           
          center.
        </p>
      </div>
      <div
        class="ctas"
      >
        <a
          class="secondary"
          href="https://nextjs.org/docs?utm_source=create-next-app&utm_medium=appdir-template&utm_campaign=create-next-app"
          rel="noopener noreferrer"
          target="_blank"
        >
          Documentation
        </a>
      </div>
    </main>
  </div>
</div>
`;

exports[`Page Snapshots renders RootLayout unchanged 1`] = `
<DocumentFragment>
  <main>
    <div
      class="container"
    >
      <nav
        class="nav-bar"
      >
        <div
          class="content-main"
        >
          <div
            class="d-flex"
          >
            <a
              class="navbar-brand"
            >
              <img
                alt="logo"
                data-nimg="1"
                decoding="async"
                height="50"
                loading="lazy"
                src="/assets/images/Logo-Luvina.svg"
                style="color: transparent;"
                title="Logo"
                width="100"
              />
            </a>
            <h5
              class="title-brand mr-auto"
            >
              Luvina Software
            </h5>
            <ul
              class="navbar-nav flex-row d-flex"
            >
              <li
                class="nav-item"
              >
                <a
                  href="/employees/adm002"
                >
                  トップ
                </a>
              </li>
              <li
                class="nav-item"
              >
                <a
                  href="/logout"
                >
                  ログアウト
                </a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
      <div
        class="content"
      >
        <div
          class="content-main"
        >
          <div>
            Test Child
          </div>
        </div>
      </div>
      <footer
        class="footer"
      >
        <div
          class="content-main"
        >
          <p>
            Copyright © 2026 ルビナソフトウエア株式会社. All rights reserved.
          </p>
        </div>
      </footer>
    </div>
  </main>
</DocumentFragment>
`;
